fix overflowing contents in journal list

--- a/Iraya/assets/stylesheets/main.css
+++ b/Iraya/assets/stylesheets/main.css
@@ -444,6 +444,10 @@ nav ul li a {
 	display: block;
 }
 
+.overflow {
+	overflow: hidden;
+}
+
 @media (max-width: 700px) {
 	.logo-container, .home-image, .about-image {
 		display: none;
@@ -451,5 +455,18 @@ nav ul li a {
 
 	h3, h5 {
 		font-size: 0.7rem;
+	}
+
+	header {
+		padding: 0;
+	}
+
+	nav {
+		padding-top: 1rem;
+		padding-bottom: 1rem;
+	}
+
+	.width-50 {
+		width: 100%;
 	}
 }
